--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -139,6 +139,12 @@
                                                 PDF
                                             </h4>
                                         </td>
+                                        <td style="width:6vw;">
+                                            <h4 id="SendMail" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/SendMail.png" width="30" />
+                                                <br />Send to MR
+                                            </h4>
+                                        </td>
                                         <td>
                                             <h4 id="Picture" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/Camera.png" width="30" />
@@ -288,9 +294,9 @@
                 // Edit文字顏色變得跟其他Submit按鈕一樣
                 $("#Edit").css("color", "rgba(66,66,66,255)");
 
-                $("#Edit,#Encode,#Amend, #Excel, #PDF").removeClass("IsEditMode");
+                $("#Edit,#Encode,#Amend, #Excel, #PDF ,#SendMail").removeClass("IsEditMode");
                 $("#Edit,#Encode,#Amend").attr("disabled", "disabled");
-                $('#Encode,#Amend, #Excel, #PDF').unbind('click');
+                $('#Encode,#Amend, #Excel, #PDF ,#SendMail').unbind('click');
                 $('#Save').addClass("IsEditMode");
                 $("#Save").removeAttr("disabled", "disabled");
                 $(".DataTable input[type='text'],.DataTable select").removeAttr("disabled", "disabled");
@@ -301,7 +307,7 @@
                 $('#Save').unbind('click').removeClass("IsEditMode");
                 $("#Save").attr("disabled", "disabled");
                 $("#Edit,#Encode,#Amend").removeAttr("disabled", "disabled");
-                $('#Excel, #PDF').addClass("IsEditMode");
+                $('#Excel, #PDF ,#SendMail').addClass("IsEditMode");
                 $(".DataTable input[type='text'],.DataTable select").attr("disabled", "disabled");
 
                 if ('@Model.AIR_LaboratoryID' != '') {
@@ -363,6 +369,38 @@
             $('#PDF').unbind('click').on('click', function () {
                 ToReport(true);
             });
+
+            $('#SendMail').unbind('click').on('click', function () {
+
+                $.ajax({
+                    url: "@Url.Action("OvenSendMail", "AccessoryOvenWash", new { Area = "BulkFGT" })",
+                    type: 'POST',
+                    contentType: "application/json; charset=utf-8",
+                    data: JSON.stringify({
+                        AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
+                        POID: $("#POID").val(),
+                        Seq1: $("#Seq1").val(),
+                        Seq2: $("#Seq2").val(),
+                    }),
+                    async: false,
+                    success: function (data) {
+                        if (data.Result) {
+                            var para = "?To=";
+                            para += "&CC=" + '@ViewBag.UserMail';
+                            para += "&Subject=" + "Accessory Oven Test – ReportNo:" + '@Model.ReportNo';
+                            para += "&Body=" + "Attachment is Accessory Oven Test– ReportNo:" + '@Model.ReportNo' + " detail data";
+                            para += "&file=" + data.FileName;
+                            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+                        }
+                        else {
+                            msg.WithError(data.ErrorMessage);
+                        }
+                    },
+                    error: function (xhr, ajaxOptions, thrownError) {
+                        console.log(xhr.responseText);
+                    }
+                });
+        });
     }
 
 
