--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -15,13 +15,13 @@
         display: flex
     }
 
-    .input-group > input:nth-child(1) {
-        flex-grow: 2
-    }
+        .input-group > input:nth-child(1) {
+            flex-grow: 2
+        }
 
-    .input-group > input:nth-child(2) {
-        flex-grow: 1
-    }
+        .input-group > input:nth-child(2) {
+            flex-grow: 1
+        }
 
     tr.row-name {
         color: black;
@@ -137,12 +137,15 @@
     .WashColor {
         background-color: rgb(173, 216, 230);
     }
-    .width6vw{
-        width:6vw;
+
+    .width6vw {
+        width: 6vw;
     }
+
     .width8vw {
         width: 8vw;
     }
+
     .width9vw {
         width: 9vw;
     }
@@ -213,6 +216,12 @@
                                             <h4 id="PDF" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/PDF.png" width="30" />
                                                 PDF
+                                            </h4>
+                                        </td>
+                                        <td>
+                                            <h4 id="SendMail" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/SendMail.png" width="30" />
+                                                Send to MR
                                             </h4>
                                         </td>
                                         <td>
@@ -344,7 +353,7 @@
                     </div>
 
                     <div style="margin-top: 1em; overflow:auto">
-                        <table cellspacing="100" id="crocking_Detail" class="DataTable DetailTable table table-striped display;" >
+                        <table cellspacing="100" id="crocking_Detail" class="DataTable DetailTable table table-striped display;">
                             <thead>
                                 <tr class="row-name" id="row-name">
                                     <th style="width:5vw">Roll#</th>
@@ -552,7 +561,7 @@
                     </div>
                 </div>
             </div>
-         </div>
+        </div>
     </div>
 }
 <script type="text/javascript">
@@ -590,8 +599,8 @@
         $('#Picture').addClass("IsEditMode");
         // 按編輯為控制disabled，如果是編輯模式下不給使用者操作，請在元件身上加上readonly
         if (EditMode) {
-            $("#Edit, #Encode, #Amend, #Excel, #PDF").removeClass("IsEditMode");
-            $('#Encode, #Amend, #Excel, #PDF').unbind('click');
+            $("#Edit, #Encode, #Amend, #Excel, #PDF ,#SendMail").removeClass("IsEditMode");
+            $('#Encode, #Amend, #Excel, #PDF ,#SendMail').unbind('click');
 
             $('#Save, #New').addClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").removeAttr("disabled", "disabled");
@@ -604,7 +613,7 @@
             $(".DataTable:not(.DetailTable) textarea").attr("disabled", "disabled");
             $(".DetailTable input,.DetailTable select, #Crocking_Main_CrockingRemark").attr("disabled", "disabled");
             $(".detailDelete").hide();
-            $('#Excel, #PDF').addClass("IsEditMode");
+            $('#Excel, #PDF ,#SendMail').addClass("IsEditMode");
             if (@Model.Crocking_Main.CrockingEncdoe == false) {
                 $("#Edit, #Encode").addClass("IsEditMode");
                 $("#Amend").unbind('click');
@@ -696,8 +705,8 @@
         $('#Picture').on('click', function () {
             var para = "?Title=" + $('.page-header span').html() + "&EditMode=" + EditMode;
             para += "&" + "Table=FIR_Laboratory";
-            para += "&" + "TargetBeforeColumn=CrockingMain_CrockingTestBeforePicture";
-            para += "&" + "TargetAfterColumn=CrockingMain_CrockingTestAfterPicture";
+            para += "&" + "TargetBeforeColumn=Crocking_Main_CrockingTestBeforePicture";
+            para += "&" + "TargetAfterColumn=Crocking_Main_CrockingTestAfterPicture";
             para += "&" + "BeforeColumn=CrockingTestBeforePicture";
             para += "&" + "AfterColumn=CrockingTestAfterPicture";
             para += "&" + "PKey_1=ID";
@@ -715,6 +724,35 @@
 
         $('#PDF').unbind('click').on('click', function () {
             ToReport(1);
+        });
+
+        $('#SendMail').unbind('click').on('click', function () {
+
+            $.ajax({
+                url: "@Url.Action("CrockingSendMail", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({
+                    ID: $('#ID').val()
+                }),
+                async: false,
+                success: function (data) {
+                    if (data.Result) {
+                        var para = "?To=";
+                        para += "&CC=" + '@ViewBag.UserMail';
+                        para += "&Subject=" + "Fabric Crocking Test – Seq:" + '@Model.Crocking_Main.SEQ';
+                        para += "&Body=" + "Attachment is Fabric Crocking Test– Seq:" + '@Model.Crocking_Main.SEQ' + " detail data";
+                        para += "&file=" + data.FileName;
+                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+                    }
+                    else {
+                        msg.WithError(data.ErrorMessage);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
         });
 
         if (@Model.Crocking_Main.CrockingEncdoe == false) {
