--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -196,6 +196,12 @@
                                             </h4>
                                         </td>
                                         <td>
+                                            <h4 id="SendMail" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/SendMail.png" width="30" />
+                                                Send to MR
+                                            </h4>
+                                        </td>
+                                        <td>
                                             <h4 id="Picture" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/Camera.png" width="30" />
                                                 Picture
@@ -209,7 +215,7 @@
                                                 New Item
                                             </h4>
                                         </td>
-                                </tbody>
+</tbody>
                             </table>
                         </div>
                     </div>
@@ -476,8 +482,8 @@
         // 按編輯為控制disabled，如果是編輯模式下不給使用者操作，請在元件身上加上readonly
         if (EditMode) {
 
-            $("#Edit, #Encode, #Amend, #Excel").removeClass("IsEditMode");
-            $('#Encode, #Amend, #Excel').unbind('click');
+            $("#Edit, #Encode, #Amend, #Excel ,#SendMail").removeClass("IsEditMode");
+            $('#Encode, #Amend, #Excel ,#SendMail').unbind('click');
 
             $('#Save, #New').addClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").removeAttr("disabled", "disabled");
@@ -490,7 +496,7 @@
             $(".DataTable:not(.DetailTable) textarea").attr("disabled", "disabled");
             $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark").attr("disabled", "disabled");
             $(".detailDelete").hide();
-            $('#Excel').addClass("IsEditMode");
+            $('#Excel ,#SendMail').addClass("IsEditMode");
 
             if (@Model.Heat_Main.HeatEncode == false) {
                 $("#Edit, #Encode").addClass("IsEditMode");
@@ -587,7 +593,7 @@
             var para = "?Title=" + $('.page-header span').html() + "&EditMode=" + EditMode;
             para += "&" + "Table=FIR_Laboratory";
             para += "&" + "TargetBeforeColumn=Heat_Main_HeatTestBeforePicture";
-            para += "&" + "TargetAfterColumn=Heat_Main_HeatTestAfterPicture";            
+            para += "&" + "TargetAfterColumn=Heat_Main_HeatTestAfterPicture";
             para += "&" + "BeforeColumn=HeatTestBeforePicture";
             para += "&" + "AfterColumn=HeatTestAfterPicture";
             para += "&" + "PKey_1=ID";
@@ -601,6 +607,35 @@
 
         $('#Excel').unbind('click').on('click', function () {
             ToReport();
+        });
+
+        $('#SendMail').unbind('click').on('click', function () {
+
+            $.ajax({
+                url: "@Url.Action("HeatSendMail", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({
+                    ID: $('#ID').val()
+                }),
+                async: false,
+                success: function (data) {
+                    if (data.Result) {
+                        var para = "?To=";
+                        para += "&CC=" + '@ViewBag.UserMail';
+                        para += "&Subject=" + "Fabric Heat Test – Seq:" + '@Model.Heat_Main.SEQ';
+                        para += "&Body=" + "Attachment is Fabric Heat Test– Seq:" + '@Model.Heat_Main.SEQ' + " detail data";
+                        para += "&file=" + data.FileName;
+                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
+                    }
+                    else {
+                        msg.WithError(data.ErrorMessage);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
         });
 
         if (@Model.Heat_Main.HeatEncode == false) {
@@ -908,7 +943,7 @@
         $("#Heat_Detail_" + targetID + "__Inspector").val(data.ID);
         $("#Heat_Detail_" + targetID + "__Name").val(data.Name + ' Ext.' + data.ExtNo);
     }
-    
+
     function GetPicture(data) {
         $('#Heat_Main_HeatTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
         $('#Heat_Main_HeatTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
