--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
@@ -270,6 +270,7 @@
                     <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width: 250vw">
                         <thead>
                             <tr class="row-name" id="row-name">
+                                <th style="width:5vw">Report No</th>
                                 <th style="width:5vw">Seq</th>
                                 <th style="width:5vw">WKNo</th>
                                 <th style="width:5vw">Arrive W/H Date</th>
@@ -304,6 +305,9 @@
                             {
                                 string styleColor = string.Empty;
                                 <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                                    <td>
+                                        @Html.DisplayFor(modelItem => Model.Details[i].ReportNo)
+                                    </td>
                                     <td>
                                         @Html.HiddenFor(modelItem => Model.Details[i].ID)
                                         @Html.DisplayFor(modelItem => Model.Details[i].Seq)
